# Analise-Demonstrativo

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/extrator_glosas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/glosa_extractor/: __init__.py  amil_glosa_catalog.py  amil_normalization.py  amil_reporting.py  amil_schema.py  business_rules.py  cli.py  convenios.py  excel_writer.py  normalization.py  pipeline.py  reporting.py  schema.py  web_app.py  web_cli.py
src/glosa_extractor/parsers/: __init__.py  amil_xml_tiss.py  pdf_parser.py  xlsx_parser.py  xml_tiss.py
tests/: test_amil_glosa_catalog.py  test_amil_reporting.py  test_amil_xml_parser.py  test_business_rules.py  test_normalization.py  test_pipeline_convenios.py  test_reporting.py  test_xml_parser.py
